// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not add sourcemap to import-as.tsx if NODE_ENV === 'production' 1`] = `

File: import-as.tsx
TypeScript before transform:
  import 'somepolyfill'
  import { default as emotion } from 'react-emotion'
  import React from 'react'
  import ReactDOM from 'react-dom'
  
  interface Props {
    backgroundColor: string
  }
  
  const Wrapper = emotion('div')(
    {
      color: 'red',
    },
    (props: Props) => ({
      backgroundColor: props.backgroundColor,
    }),
  )
  
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (
        <Wrapper backgroundColor="blue">
          <span>hello</span>
        </Wrapper>
      )
    }
  }
  
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'))
  


      ↓ ↓ ↓ ↓ ↓ ↓

TypeScript after transform:
  import 'somepolyfill';
  import { default as emotion } from 'react-emotion';
  import React from 'react';
  import ReactDOM from 'react-dom';
  interface Props {
    backgroundColor: string;
  }
  const Wrapper = /*#__PURE__*/ emotion('div', {
    target: "e5i1odf0"
  })({
    color: 'red',
  }, (props: Props) => ({
    backgroundColor: props.backgroundColor,
  }), "label:Wrapper;");
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (<Wrapper backgroundColor="blue">
      <span>hello</span>
    </Wrapper>);
    }
  }
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'));
  

`;

exports[`should transform import-as.tsx with autoLabel false 1`] = `

File: import-as.tsx
TypeScript before transform:
  import 'somepolyfill'
  import { default as emotion } from 'react-emotion'
  import React from 'react'
  import ReactDOM from 'react-dom'
  
  interface Props {
    backgroundColor: string
  }
  
  const Wrapper = emotion('div')(
    {
      color: 'red',
    },
    (props: Props) => ({
      backgroundColor: props.backgroundColor,
    }),
  )
  
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (
        <Wrapper backgroundColor="blue">
          <span>hello</span>
        </Wrapper>
      )
    }
  }
  
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'))
  


      ↓ ↓ ↓ ↓ ↓ ↓

TypeScript after transform:
  import 'somepolyfill';
  import { default as emotion } from 'react-emotion';
  import React from 'react';
  import ReactDOM from 'react-dom';
  interface Props {
    backgroundColor: string;
  }
  const Wrapper = /*#__PURE__*/ emotion('div', {
    target: "e5i1odf0"
  })({
    color: 'red',
  }, (props: Props) => ({
    backgroundColor: props.backgroundColor,
  }), "/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInRlc3RzL2ZpeHR1cmVzL2ltcG9ydC1hcy50c3giXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBU2dCIiwiZmlsZSI6ImltcG9ydC1hcy50c3giLCJzb3VyY2VSb290IjoiIiwic291cmNlc0NvbnRlbnQiOlsiaW1wb3J0ICdzb21lcG9seWZpbGwnXG5pbXBvcnQgeyBkZWZhdWx0IGFzIGVtb3Rpb24gfSBmcm9tICdyZWFjdC1lbW90aW9uJ1xuaW1wb3J0IFJlYWN0IGZyb20gJ3JlYWN0J1xuaW1wb3J0IFJlYWN0RE9NIGZyb20gJ3JlYWN0LWRvbSdcblxuaW50ZXJmYWNlIFByb3BzIHtcbiAgYmFja2dyb3VuZENvbG9yOiBzdHJpbmdcbn1cblxuY29uc3QgV3JhcHBlciA9IGVtb3Rpb24oJ2RpdicpKFxuICB7XG4gICAgY29sb3I6ICdyZWQnLFxuICB9LFxuICAocHJvcHM6IFByb3BzKSA9PiAoe1xuICAgIGJhY2tncm91bmRDb2xvcjogcHJvcHMuYmFja2dyb3VuZENvbG9yLFxuICB9KSxcbilcblxuZXhwb3J0IGNsYXNzIFNpbXBsZUNvbXBvbmVudCBleHRlbmRzIFJlYWN0LlB1cmVDb21wb25lbnQge1xuICByZW5kZXIoKSB7XG4gICAgcmV0dXJuIChcbiAgICAgIDxXcmFwcGVyIGJhY2tncm91bmRDb2xvcj1cImJsdWVcIj5cbiAgICAgICAgPHNwYW4+aGVsbG88L3NwYW4+XG4gICAgICA8L1dyYXBwZXI+XG4gICAgKVxuICB9XG59XG5cblJlYWN0RE9NLnJlbmRlcig8U2ltcGxlQ29tcG9uZW50IC8+LCBkb2N1bWVudC5xdWVyeVNlbGVjdG9yKCcjYXBwJykpXG4iXX0= */");
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (<Wrapper backgroundColor="blue">
      <span>hello</span>
    </Wrapper>);
    }
  }
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'));
  

`;

exports[`should transform import-as.tsx with default configs 1`] = `

File: import-as.tsx
TypeScript before transform:
  import 'somepolyfill'
  import { default as emotion } from 'react-emotion'
  import React from 'react'
  import ReactDOM from 'react-dom'
  
  interface Props {
    backgroundColor: string
  }
  
  const Wrapper = emotion('div')(
    {
      color: 'red',
    },
    (props: Props) => ({
      backgroundColor: props.backgroundColor,
    }),
  )
  
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (
        <Wrapper backgroundColor="blue">
          <span>hello</span>
        </Wrapper>
      )
    }
  }
  
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'))
  


      ↓ ↓ ↓ ↓ ↓ ↓

TypeScript after transform:
  import 'somepolyfill';
  import { default as emotion } from 'react-emotion';
  import React from 'react';
  import ReactDOM from 'react-dom';
  interface Props {
    backgroundColor: string;
  }
  const Wrapper = /*#__PURE__*/ emotion('div', {
    target: "e5i1odf0"
  })({
    color: 'red',
  }, (props: Props) => ({
    backgroundColor: props.backgroundColor,
  }), "label:Wrapper;", "/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInRlc3RzL2ZpeHR1cmVzL2ltcG9ydC1hcy50c3giXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBU2dCIiwiZmlsZSI6ImltcG9ydC1hcy50c3giLCJzb3VyY2VSb290IjoiIiwic291cmNlc0NvbnRlbnQiOlsiaW1wb3J0ICdzb21lcG9seWZpbGwnXG5pbXBvcnQgeyBkZWZhdWx0IGFzIGVtb3Rpb24gfSBmcm9tICdyZWFjdC1lbW90aW9uJ1xuaW1wb3J0IFJlYWN0IGZyb20gJ3JlYWN0J1xuaW1wb3J0IFJlYWN0RE9NIGZyb20gJ3JlYWN0LWRvbSdcblxuaW50ZXJmYWNlIFByb3BzIHtcbiAgYmFja2dyb3VuZENvbG9yOiBzdHJpbmdcbn1cblxuY29uc3QgV3JhcHBlciA9IGVtb3Rpb24oJ2RpdicpKFxuICB7XG4gICAgY29sb3I6ICdyZWQnLFxuICB9LFxuICAocHJvcHM6IFByb3BzKSA9PiAoe1xuICAgIGJhY2tncm91bmRDb2xvcjogcHJvcHMuYmFja2dyb3VuZENvbG9yLFxuICB9KSxcbilcblxuZXhwb3J0IGNsYXNzIFNpbXBsZUNvbXBvbmVudCBleHRlbmRzIFJlYWN0LlB1cmVDb21wb25lbnQge1xuICByZW5kZXIoKSB7XG4gICAgcmV0dXJuIChcbiAgICAgIDxXcmFwcGVyIGJhY2tncm91bmRDb2xvcj1cImJsdWVcIj5cbiAgICAgICAgPHNwYW4+aGVsbG88L3NwYW4+XG4gICAgICA8L1dyYXBwZXI+XG4gICAgKVxuICB9XG59XG5cblJlYWN0RE9NLnJlbmRlcig8U2ltcGxlQ29tcG9uZW50IC8+LCBkb2N1bWVudC5xdWVyeVNlbGVjdG9yKCcjYXBwJykpXG4iXX0= */");
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (<Wrapper backgroundColor="blue">
      <span>hello</span>
    </Wrapper>);
    }
  }
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'));
  

`;

exports[`should transform import-as.tsx with sourcemap false 1`] = `

File: import-as.tsx
TypeScript before transform:
  import 'somepolyfill'
  import { default as emotion } from 'react-emotion'
  import React from 'react'
  import ReactDOM from 'react-dom'
  
  interface Props {
    backgroundColor: string
  }
  
  const Wrapper = emotion('div')(
    {
      color: 'red',
    },
    (props: Props) => ({
      backgroundColor: props.backgroundColor,
    }),
  )
  
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (
        <Wrapper backgroundColor="blue">
          <span>hello</span>
        </Wrapper>
      )
    }
  }
  
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'))
  


      ↓ ↓ ↓ ↓ ↓ ↓

TypeScript after transform:
  import 'somepolyfill';
  import { default as emotion } from 'react-emotion';
  import React from 'react';
  import ReactDOM from 'react-dom';
  interface Props {
    backgroundColor: string;
  }
  const Wrapper = /*#__PURE__*/ emotion('div', {
    target: "e5i1odf0"
  })({
    color: 'red',
  }, (props: Props) => ({
    backgroundColor: props.backgroundColor,
  }), "label:Wrapper;");
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (<Wrapper backgroundColor="blue">
      <span>hello</span>
    </Wrapper>);
    }
  }
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'));
  

`;
